# D-Link

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/: CICD_SETUP.md
.github/workflows/: release.yml
packaging/arch/: PKGBUILD  d-link.install
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  lib.rs  main.rs
src/components/: DeviceInfo.vue  DeviceSelector.vue  FileBrowser.vue  FileGrid.vue  FileIcon.vue  FileToolbar.vue  OperationQueue.vue  TitleBar.vue  index.ts
src/services/: usbService.ts
src/stores/: devices.ts  fileBrowser.ts  index.ts
src/types/: index.ts
src/utils/: constants.ts  format.ts
